# pytest-docker-compose-on-github-actions

./: README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
tests/: docker-compose.yml  test_app.py  test_docker.py
