[tool.poetry]
name = "pytest-docker-compose-on-github-actions"
version = "0.1.0"
description = ""
authors = ["Shunpoco <tkngsnsk313320@gmail.com>"]
readme = "README.md"
packages = [{include = "pytest_docker_compose_on_github_actions"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.0"
pytest-docker = "^1.0.1"
requests = "^2.28.1"
docker = "^6.0.1"


[tool.poetry.group.dev.dependencies]
python-lsp-server = {extras = ["all"], version = "^1.6.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
